# gbs

./: .gitignore  CMakeLists.txt  LICENSE  files.txt
Week1/: asc.c  hd  hd.c  hexdump.c  rotup  rotup.c
Week11/: mysh.c
Week11_J/: list.c  memory.h  mysh.c
Week11_P/: mysh  mysh.c  parser.c  wildcard.c
Week1_J/asc/: CMakeLists.txt  asc  asc.c
Week1_J/hw/: CMakeLists.txt  hw
Week1_P/: asc  asc.c  blatt01.tar  hd.c  hexdump.c  hw  hw.c  rotup.c
Week2/: list.c  list.h  lt.c  shellsim  shellsim_tester.py
Week2_P/: list.c  lt  shellsim  shellsim.c  shellsim_tester.py
Week3/: Makefile  forkmany  forkmany.c  forkmany_tester.py  forkone  forkone.c  forkone_tester.py
Week4/: list.c  list.h  threadit.c  threadit_tester.py  threadsched.c  threadschedOld.c  threadsched_tester.py  threadsched_tester_debug.py  threadsched_tester_orig.py
Week4_T/: Makefile  list.h  print_time_step.c  threadit  threadit.c  threadshed.c
Week5/: list.c  list.h  syncem  syncem.c  syncem_tester.py  syncorder  syncorder.c  syncorder_tester.py
Week6/: Makefile  list.c  list.h  mysh  mysh.c  mysh_tester.py  parser.c  parsertest  parsertest.c  parsertestDebug  parsertest_tester.py
Week7/: Makefile  list.c  mysh  mysh.c  mysh_tester.py  parser.c  pipetest  pipetest.c  test.txt
Week8/: decompiled  hexdump.c  list.c  list.h  server  server.c
Week8_P/: Makefile  list.h  server  server_tester.py
Week9/: Makefile  list.c  list.h  mem  mem.c  memalloc.c  memalloc.h  memory.c  source.py
Week9_P/: Makefile  list.c  list.h  make.txt  mem  mem.c  mem_tester.py  memory.c  memory.h
